force-app/main/default/objects/Product2/fields/Default_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Default_Term_Months__c</fullName>
    <label>Default Term Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>