force-app/main/default/objects/Product2/fields/Power_kW__c.field-meta.xml
<CustomField>
    <fullName>Power_kW__c</fullName>
    <label>Power kW</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>