force-app/main/default/objects/Product2/fields/Requires_Installation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Installation</label>
    <type>Checkbox</type>
</CustomField>