force-app/main/default/objects/Product2/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
                <default>true</default>
                <label>One-Time</label>
            </value>
            <value>
                <fullName>Monthly Recurring</fullName>
            </value>
            <value>
                <fullName>Annual Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>